New Crowdin translations (#6738)
* New translations English-en_US.json (Indonesian)
[ci skip]

* New translations English-en_US.json (Indonesian)
[ci skip]

* New translations English-en_US.json (Indonesian)
[ci skip]

* New translations English-en_US.json (Indonesian)
[ci skip]

* New translations English-en_US.json (Indonesian)
[ci skip]

--- a/src/locale/Indonesian-id_ID.json
+++ b/src/locale/Indonesian-id_ID.json
@@ -16,8 +16,8 @@
   "unselect_all": "Tidak memilih semua",
   "launch": "Luncurkan",
   "current_user": "Pengguna Saat Ini",
-  "please_log_in": "Silahkan log in untuk melanjutkan",
-  "login_required": "Anda harus log in untuk menggunakan ${app}.",
+  "please_log_in": "Silahkan Masuk untuk melanjutkan",
+  "login_required": "Anda harus Masuk untuk menggunakan ${app}.",
   "only_english": "Hanya Bahasa Inggris yang didukung saat ini",
   "change_locale": "Perubahan Lokal",
   "app_language": "Bahasa Aplikasi",
@@ -25,7 +25,7 @@
   "change_project": "Perubahan Proyek",
   "current_tool": "Alat Saat Ini",
   "change_tool": "Perubahan Alat",
-  "currently_logged_in": "Anda saat ini sudah masuk.",
+  "currently_logged_in": "Anda saat in sudah masuk.",
   "to_continue_to_projects": "Untuk melanjutkan ke Proyek, klik \" Lanjut ke Proyek\".",
   "home": "Halaman Utama",
   "required": "Diperlukan",
@@ -372,52 +372,52 @@
     "select": "Pilih",
     "please_select": "Silahkan pilih terjemahan untuk:",
     "has_been_translated": "telah diterjemahkan sebagai",
-    "alignments_reset": "There have been changes to the current verse which interfere with your alignments.\nThe alignments for the current verse have been reset.",
-    "chapter": "Chapter",
-    "no_results": "No results",
-    "invalidated": "Invalidated",
-    "bookmarks": "Bookmarks",
-    "selected": "Selected",
-    "no_selection": "No selection",
+    "alignments_reset": "Telah ada perubahan terhadap ayat saat ini yang mengganggu penyelarasan anda.\nPenyelarasan untuk ayat saait ini telah di atur ulang.",
+    "chapter": "Pasal",
+    "no_results": "Tidak Ada Hasil",
+    "invalidated": "Tidak Valid",
+    "bookmarks": "Bookmark",
+    "selected": "Dipilih",
+    "no_selection": "Tidak ada pilihan",
     "verse_edit": "Pengeditan Ayat",
-    "comments": "Comments",
+    "comments": "Komentar",
     "menu": "Menu",
-    "no_gl_available": "None available",
-    "invalid_checks": "Invalidated checks",
-    "invalid_verse_alignments": "Verses with invalidated alignments.",
+    "no_gl_available": "Tidak Tersedia",
+    "invalid_checks": "Pemeriksaan Tidak Valid",
+    "invalid_verse_alignments": "Ayat dengan penyelarasan tidak valid",
     "invalidation_checking": "Memeriksa apakah pengeditan ini bertentangan dengan pilihan dan penyelarasan yang disimpan ...",
-    "alignments_reset_wa_tool": "Changes have been detected in your project which have invalidated some of your alignments.\nThese verses display an icon of a broken chain next to the reference in the side menu.",
-    "invalid_verse_alignments_and_selections": "Changes have been detected in your project which have invalidated some selections and some alignments. These verses display an icon of a broken chain next to the reference in the side menu.",
-    "invalid_check_found": "There is a problem with the content for this check: ${report} Do you want to report this problem so it can be fixed?"
+    "alignments_reset_wa_tool": "Perubahan telah terdeteksi di proyek Anda yang telah membuat sebagian penyelarasan Anda tidak valid.\nAyat-ayat ini menampilkan ikon rantai rusak di sebelah referensi di menu samping.",
+    "invalid_verse_alignments_and_selections": "Perubahan telah terdeteksi di proyek Anda yang telah membatalkan beberapa pilihan dan beberapa penyelarasan. Ayat-ayat ini menampilkan ikon rantai rusak di sebelah referensi di menu samping.",
+    "invalid_check_found": "Ada masalah dengan konten untuk pemeriksaan ini: ${report} Apakah Anda ingin melaporkan masalah ini sehingga dapat diperbaiki?"
   },
   "buttons": {
-    "back_button": "Go Back",
-    "cancel_button": "Cancel",
-    "cancel_import_button": "Cancel Import",
-    "clear_selection_button": "Clear Selection",
-    "close_button": "Close",
-    "comment_button": "Comment",
-    "continue_button": "Continue",
-    "continue_import_button": "Continue Import",
-    "d43_login_button": "Log in with ${door43}",
+    "back_button": "Kembali",
+    "cancel_button": "Batalkan",
+    "cancel_import_button": "Batalkan Impor",
+    "clear_selection_button": "Hapus Pilihan",
+    "close_button": "Tutup",
+    "comment_button": "Komentar",
+    "continue_button": "Lanjutkan",
+    "continue_import_button": "Lanjutkan Impor",
+    "d43_login_button": "Masuk dengan ${door43}",
     "edit_verse_button": "Edit Ayat",
-    "go_to_project_button": "Go to Projects",
-    "go_to_tools_button": "Go to Tools",
-    "go_to_user_button": "Go to User",
-    "guest_button": "Continue as Guest",
-    "home_button": "Go to Home",
-    "import_button": "Import",
-    "launch_button": "Launch",
-    "log_in_button": "Log in",
-    "log_out_button": "Log out",
-    "new_account_button": "Create New Account",
-    "ok_button": "OK",
-    "overwrite_project": "Overwrite Project",
-    "project_button": "Project",
-    "save_and_continue_button": "Save & Continue",
-    "save_and_previous_button": "Save & Previous",
-    "save_button": "Save",
-    "search_button": "Search",
+    "go_to_project_button": "Pergi ke Proyek",
+    "go_to_tools_button": "Pergi ke Peralatan",
+    "go_to_user_button": "Pergi ke Pengguna",
+    "guest_button": "Lanjutkan sebagai Pengunjung",
+    "home_button": "Pergi ke Halaman Depan",
+    "import_button": "Impor",
+    "launch_button": "Jalankan",
+    "log_in_button": "Masuk",
+    "log_out_button": "Keluar",
+    "new_account_button": "Buat Akun Baru",
+    "ok_button": "OKE",
+    "overwrite_project": "Timpa Proyek",
+    "project_button": "Proyek",
+    "save_and_continue_button": "Simpan & Lanjutkan",
+    "save_and_previous_button": "Simpan & Sebelumnya",
+    "save_button": "Simpan",
+    "search_button": "Cari",
     "select_button": "Select",
     "to_project_button": "Continue to Project",
     "tool_button": "Tool",
@@ -470,50 +470,50 @@
     "translate-symaction": "Symbolic Action",
     "writing-symlanguage": "Symbolic Language",
     "translate-unknown": "Translate Unknowns",
-    "translate-bdistance": "Biblical Distance",
-    "translate-bmoney": "Biblical Money",
-    "translate-bvolume": "Biblical Volume",
-    "figs-go": "Go and Come",
-    "translate-hebrewmonths": "Hebrew Months",
-    "translate-names": "How to Translate Names",
-    "translate-bweight": "Biblical Weight",
-    "discourse": "Discourse",
-    "writing-background": "Background Information",
-    "writing-endofstory": "End of Story",
-    "writing-intro": "Types of Writing",
-    "writing-newevent": "Introduction of a New Event",
-    "figs-events": "Order of Events",
-    "figs-exclamations": "Exclamations",
-    "figs-parables": "Parables",
-    "writing-participants": "Introduction of New and Old Participants",
-    "figs-pastforfuture": "Predictive Past",
-    "writing-poetry": "Poetry",
-    "writing-proverbs": "Proverbs",
-    "figs-quotations": "Direct and Indirect Quotations",
-    "writing-quotations": "Quotations and Quote Margins",
-    "figs-quotesinquotes": "Quotes Within Quotes",
-    "figs-sentences": "Sentence Structure",
-    "translate-versebridge": "Verse Bridges",
-    "figs-exmetaphor": "Extended Metaphor",
-    "writing-connectingwords": "Connecting Words",
-    "figs-declarative": "Statements - Other Uses",
-    "figs-imperative": "Imperatives - Other Uses",
-    "grammar": "Grammar",
-    "figs-hypo": "Hypothetical Situations",
-    "figs-activepassive": "Active or Passive",
-    "figs-gendernotations": "When Masculine Words Include Women",
-    "figs-pronouns": "Pronouns",
-    "figs-you": "Forms of You",
-    "figs-123person": "First, Second, or Third Person",
-    "figs-abstractnouns": "Abstract Nouns",
-    "figs-distinguish": "Distinguishing versus Informing or Reminding",
-    "figs-exclusive": "Exclusive and Inclusive \"We\"",
-    "figs-genericnoun": "Generic Noun Phrases",
-    "figs-inclusive": "Inclusive \"We\"",
-    "figs-nominaladj": "Nominal Adjectives",
-    "figs-possession": "Possession",
-    "figs-rpronouns": "Reflexive Pronouns",
-    "figs-we": "Forms of We",
-    "figs-they": "Forms of They"
+    "translate-bdistance": "Jarak dalam Alkitab",
+    "translate-bmoney": "Uang dalam Alkitab",
+    "translate-bvolume": "Volume dalam Alkitab",
+    "figs-go": "Pergi dan Datang",
+    "translate-hebrewmonths": "Bulan dalam Ibrani",
+    "translate-names": "Bagaimana menerjemahkan Nama-nama",
+    "translate-bweight": "Berat dalam Alkitab",
+    "discourse": "Ceramah",
+    "writing-background": "Informasi Latar Belakang",
+    "writing-endofstory": "Akhir Cerita",
+    "writing-intro": "Jenis Tulisan",
+    "writing-newevent": "Pengenalan akan Peristiwa Baru",
+    "figs-events": "Urutan Peristiwa",
+    "figs-exclamations": "Seruan",
+    "figs-parables": "Perumpamaan",
+    "writing-participants": "Pengenalan Peserta Baru dan Lama",
+    "figs-pastforfuture": "Prediktif Masa Lalu",
+    "writing-poetry": "Puisi",
+    "writing-proverbs": "Amsal",
+    "figs-quotations": "Kutipan langsung dan Tidak Langsung",
+    "writing-quotations": "Kutipan dan Margin Kutipan",
+    "figs-quotesinquotes": "Kutipan dalam Kutipan",
+    "figs-sentences": "Struktur Kalimat",
+    "translate-versebridge": "Jembatan Ayat",
+    "figs-exmetaphor": "Metafora yang Diperpanjang",
+    "writing-connectingwords": "Kata Penghubung",
+    "figs-declarative": "Pernyataan - Penggunaan lainnya",
+    "figs-imperative": "Imperatif - Penggunaan Lainnya",
+    "grammar": "Tata Bahasa",
+    "figs-hypo": "Situasi Hipotesis",
+    "figs-activepassive": "Aktif atau Pasif",
+    "figs-gendernotations": "Ketika kata-kata Maskulin termasuk Wanita",
+    "figs-pronouns": "Kata Ganti",
+    "figs-you": "Bentuk dari Anda",
+    "figs-123person": "Orang Pertama, Kedua dan Ketiga",
+    "figs-abstractnouns": "Kata benda Abstrak",
+    "figs-distinguish": "Membedakan melawan Memberi Informasi atau Mengingatkan",
+    "figs-exclusive": "\"Kita' yang Ekslusif dan Inklusif",
+    "figs-genericnoun": "Frase Kata Benda Generik",
+    "figs-inclusive": "\"Kita\" Inklusif",
+    "figs-nominaladj": "Kata Sifat Nominal",
+    "figs-possession": "Milik",
+    "figs-rpronouns": "Kata Ganti Refleksif",
+    "figs-we": "Bentuk dari Kita",
+    "figs-they": "Bentuk dari Mereka"
   }
 }
