New Crowdin translations (#6745)
* New translations English-en_US.json (Indonesian)
[ci skip]

* New translations English-en_US.json (Portuguese, Brazilian)
[ci skip]

* New translations English-en_US.json (Naga Pidgin)
[ci skip]

* New translations English-en_US.json (Telugu)
[ci skip]

* New translations English-en_US.json (Tamil)
[ci skip]

* New translations English-en_US.json (Spanish)
[ci skip]

* New translations English-en_US.json (Russian)
[ci skip]

* New translations English-en_US.json (Punjabi)
[ci skip]

* New translations English-en_US.json (Odia)
[ci skip]

* New translations English-en_US.json (Assamese)
[ci skip]

* New translations English-en_US.json (Nepali)
[ci skip]

* New translations English-en_US.json (Marathi)
[ci skip]

* New translations English-en_US.json (Malayalam)
[ci skip]

* New translations English-en_US.json (Kannada)
[ci skip]

* New translations English-en_US.json (Hindi)
[ci skip]

* New translations English-en_US.json (Gujarati)
[ci skip]

* New translations English-en_US.json (Bengali, India)
[ci skip]

* New translations English-en_US.json (Urdu-Devanagari)
[ci skip]

* New translations English-en_US.json (Portuguese, Brazilian)
[ci skip]

* New translations English-en_US.json (Indonesian)
[ci skip]

* New translations English-en_US.json (Indonesian)
[ci skip]

* New translations English-en_US.json (Indonesian)
[ci skip]

--- a/src/locale/Indonesian-id_ID.json
+++ b/src/locale/Indonesian-id_ID.json
@@ -329,6 +329,7 @@
     }
   },
   "tools": {
+    "tN_version_warning": "Membuka proyek dalam terjemahan Notes dapat membatalkan beberapa pekerjaan yang sebelumnya diselesaikan. Apakah anda yakin ingin melanjutkan?<br/><br/>Bahasa Gateway yang telah Anda pilih untuk digunakan untuk translationNotes menggunakan versi sebelumnya dari teks bahasa asli (Ibrani atau Yunani). Menjalankannya sekarang dapat mereset beberapa cek yang sebelumnya diselesaikan dalam translationWords dan / atau membatalkan beberapa penyelarasan. Pemeriksaan dan keselarasan yang diatur ulang akan ditandai sebagai tidak lengkap setelah menjalankan alat ini.",
     "loading_tool_data": "Memuat data.",
     "resource_missing_for_tool": "Alat saat ini membutuhkan versi UGNT yang berbeda. Silakan klik Unduh untuk mengambil sumber ini.",
     "no_checks_selected": "Anda harus memilih kategori untuk menjalankan alat ini",
@@ -418,58 +419,58 @@
     "save_and_previous_button": "Simpan & Sebelumnya",
     "save_button": "Simpan",
     "search_button": "Cari",
-    "select_button": "Select",
-    "to_project_button": "Continue to Project",
-    "tool_button": "Tool",
-    "submit_button": "Submit",
-    "overwrite": "Overwrite",
-    "create_new_repo": "Create New Repository",
-    "rename_repo": "Rename Repository",
-    "rename_local": "Rename Local Project",
-    "do_not_rename": "Do Not Rename",
-    "contact_helpdesk": "Contact Helpdesk",
-    "retry": "Retry",
-    "update": "Update to latest version",
-    "ignore_button": "Ignore",
-    "feedback_button": "Send Feedback"
+    "select_button": "Pilih",
+    "to_project_button": "Lanjutkan ke Proyek",
+    "tool_button": "Alat",
+    "submit_button": "Ajukan",
+    "overwrite": "Timpa",
+    "create_new_repo": "Buat Tempat Penyimpanan Baru",
+    "rename_repo": "Ganti Nama Tempat Penyimpanan",
+    "rename_local": "Ganti Nama Proyek Lokal",
+    "do_not_rename": "Jangan Ganti Nama",
+    "contact_helpdesk": "Hubungi Helpdesk",
+    "retry": "Coba Lagi",
+    "update": "perbarui ke versi terbaru",
+    "ignore_button": "Abaikan",
+    "feedback_button": "Kirim Tanggapan"
   },
   "tool_card_categories": {
-    "kt": "Key Terms",
-    "names": "Names",
-    "other_terms": "Other Terms",
-    "other": "Other",
-    "translate-manuscripts": "Original Manuscripts",
-    "guidelines-sonofgodprinciples": "Translating Son and Father",
-    "translate-textvariants": "Textual Variants",
-    "translate-transliterate": "Copy or Borrow Words",
-    "numbers": "Numbers",
-    "translate-numbers": "Numbers",
-    "translate-fraction": "Fractions",
-    "translate-ordinal": "Ordinal Numbers",
-    "figures": "Figures of Speech",
+    "kt": "Istilah Kunci",
+    "names": "Nama-nama",
+    "other_terms": "Istilah Lainnya",
+    "other": "Lain-lain",
+    "translate-manuscripts": "Manuskrip Asli",
+    "guidelines-sonofgodprinciples": "Menerjemahakn Bapa dan Anak",
+    "translate-textvariants": "Variasi Tekstual",
+    "translate-transliterate": "Menyalin dan Meminjam Kata-Kata",
+    "numbers": "BIlangan",
+    "translate-numbers": "Bilangan",
+    "translate-fraction": "Pecahan",
+    "translate-ordinal": "Nomor Urut",
+    "figures": "Majas",
     "figs-idiom": "Idiom",
-    "figs-irony": "Irony",
-    "figs-metaphor": "Metaphor",
-    "figs-rquestion": "Rhetorical Question",
-    "figs-simile": "Simile",
-    "figs-apostrophe": "Apostrophe",
-    "figs-euphemism": "Euphemism",
+    "figs-irony": "Ironi",
+    "figs-metaphor": "Metafora",
+    "figs-rquestion": "Pertanyaan Retoris",
+    "figs-simile": "Kiasan",
+    "figs-apostrophe": "Apostrof",
+    "figs-euphemism": "Eufemisme",
     "figs-hendiadys": "Hendiadys",
-    "figs-hyperbole": "Hyperbole and Generalization",
+    "figs-hyperbole": "Hiperbola dan Generalisasi",
     "figs-litotes": "Litotes",
     "figs-merism": "Merism",
-    "figs-metonymy": "Metonymy",
-    "figs-parallelism": "Parallelism",
-    "figs-personification": "Personification",
+    "figs-metonymy": "Metonim",
+    "figs-parallelism": "Paralelisme",
+    "figs-personification": "Pengejawantahan",
     "figs-synecdoche": "Synecdoche",
-    "figs-ellipsis": "Ellipsis",
-    "figs-doublenegatives": "Double Negatives",
-    "figs-doublet": "Doublet",
-    "culture": "Culture",
-    "figs-explicit": "Assumed Knowledge and Implicit Information",
-    "translate-symaction": "Symbolic Action",
-    "writing-symlanguage": "Symbolic Language",
-    "translate-unknown": "Translate Unknowns",
+    "figs-ellipsis": "Elipsis",
+    "figs-doublenegatives": "Negatif dobel",
+    "figs-doublet": "Sepasang benda yg sama",
+    "culture": "Budaya",
+    "figs-explicit": "Pengetahuan yang Diasumsikan dan Informasi Tersirat",
+    "translate-symaction": "Tindakan Simbolik",
+    "writing-symlanguage": "Bahasa Simbolik",
+    "translate-unknown": "Terjemahan Tidak Dikenal",
     "translate-bdistance": "Jarak dalam Alkitab",
     "translate-bmoney": "Uang dalam Alkitab",
     "translate-bvolume": "Volume dalam Alkitab",
