--- a/src/locale/English-en_US.json
+++ b/src/locale/English-en_US.json
@@ -134,6 +134,7 @@
   },
   "projects": {
     "zip_files": "Zip Files",
+    "archive": "Archive",
     "error_setting_up_project": "Oops! We have encountered a problem setting up your project to be loaded. Please contact Help Desk (${email}) for assistance.",
     "error_loading": "Oops! We have encountered a problem loading your project. Please contact Help Desk (${email}) for assistance.",
     "no_project": "No project was selected",
