--- a/src/locale/English-en_US.json
+++ b/src/locale/English-en_US.json
@@ -1,5 +1,6 @@
 {
   "welcome_to_tc": "Welcome to ${app}!",
+  "are_you_sure": "Are you sure?",
   "get_started": "Get Started!",
   "version": "Version ${version}",
   "instructions": "Instructions",
