Some refactor for testability. created string constants for git and network errors in Repo error handling, added check for archived project.

--- a/src/locale/English-en_US.json
+++ b/src/locale/English-en_US.json
@@ -133,6 +133,7 @@
     "cc_by_sa": "Creative Commons Attribution-ShareAlike 4.0 International License."
   },
   "projects": {
+    "archived": "Project Archived",
     "zip_files": "Zip Files",
     "archive": "Archive",
     "archive_project": "Archive Project",
