--- a/src/locale/English-en_US.json
+++ b/src/locale/English-en_US.json
@@ -133,7 +133,7 @@
     "cc_by_sa": "Creative Commons Attribution-ShareAlike 4.0 International License."
   },
   "projects": {
-    "archived": "Project Archived",
+    "archived": "The project (${project_name}) cannot be uploaded because it has been archived on ${door43}.<br/><br/>To Upload this project, kindly unarchive the project on ${door43} first or rename the project in ${app_name}",
     "zip_files": "Zip Files",
     "archive": "Archive",
     "archive_project": "Archive Project",
