New Crowdin translations (#6928)
* New translations English-en_US.json (Portuguese, Brazilian)
[ci skip]

* New translations English-en_US.json (Spanish)
[ci skip]

* New translations English-en_US.json (Gujarati)
[ci skip]

* New translations English-en_US.json (Punjabi)
[ci skip]

* New translations English-en_US.json (Russian)
[ci skip]

* New translations English-en_US.json (Indonesian)
[ci skip]

* New translations English-en_US.json (Assamese)
[ci skip]

* New translations English-en_US.json (Naga Pidgin)
[ci skip]

* New translations English-en_US.json (Nepali)
[ci skip]

* New translations English-en_US.json (Bengali, India)
[ci skip]

* New translations English-en_US.json (Odia)
[ci skip]

* New translations English-en_US.json (Telugu)
[ci skip]

* New translations English-en_US.json (Kannada)
[ci skip]

* New translations English-en_US.json (Malayalam)
[ci skip]

* New translations English-en_US.json (Hindi)
[ci skip]

* New translations English-en_US.json (Marathi)
[ci skip]

* New translations English-en_US.json (Tamil)
[ci skip]

* New translations English-en_US.json (Urdu-Devanagari)
[ci skip]

* New translations English-en_US.json (Portuguese, Brazilian)
[ci skip]

* New translations English-en_US.json (Malayalam)
[ci skip]

* New translations English-en_US.json (Naga Pidgin)
[ci skip]

* New translations English-en_US.json (Nepali)
[ci skip]

* New translations English-en_US.json (Bengali, India)
[ci skip]

* New translations English-en_US.json (Odia)
[ci skip]

* New translations English-en_US.json (Assamese)
[ci skip]

* New translations English-en_US.json (Kannada)
[ci skip]

* New translations English-en_US.json (Telugu)
[ci skip]

* New translations English-en_US.json (Indonesian)
[ci skip]

* New translations English-en_US.json (Hindi)
[ci skip]

* New translations English-en_US.json (Marathi)
[ci skip]

* New translations English-en_US.json (Tamil)
[ci s

--- a/src/locale/Punjabi-pa_IN.json
+++ b/src/locale/Punjabi-pa_IN.json
@@ -133,6 +133,7 @@
     "cc_by_sa": "ਕਰੀਏਟਿਵ ਕਾਮਨਜ਼ ਐਟ੍ਰਬ੍ਯੂਸ਼ਨ-ਸ਼ੇਅਰਲਾਈਕ 4.0 ਇੰਟਰਨੈਸ਼ਨਲ ਲਾਇਸੰਸ."
   },
   "projects": {
+    "archived": "The project (${project_name}) cannot be uploaded because it has been archived on ${door43}.<br/><br/>To Upload this project, kindly unarchive the project on ${door43} first or rename the project in ${app_name}.",
     "zip_files": "ਜ਼ਿਪ ਫਾਇਲ",
     "archive": "Archive",
     "archive_project": "Archive Project",
