--- a/src/locale/English-en_US.json
+++ b/src/locale/English-en_US.json
@@ -64,6 +64,7 @@
   "email_address_optional": "Email address (optional):",
   "invalid_email": "Invalid email address",
   "include_app_logs": "Include application logs",
+  "resetting_alignments": "Resetting alignment for",
   "alignment_prompt": "Would you like to export the alignment data with your text?",
   "include_alignment_check": "Include alignment data",
   "loading_verse_edits": "Loading Verse Edits",
