--- a/src/locale/Assamese-as_IN.json
+++ b/src/locale/Assamese-as_IN.json
@@ -240,7 +240,7 @@
     "publicly_available": "Those listed as contributors or checkers will be made publicly available.",
     "field_required": "This field is required",
     "language_direction": "Language Direction",
-    "language_font": "Language Font",
+    "project_font": "Project Font",
     "ltr": "Left to right",
     "rtl": "Right to left",
     "invalid_language_name": "Language name is not valid",
