--- a/src/locale/English-en_US.json
+++ b/src/locale/English-en_US.json
@@ -74,6 +74,7 @@
   "sending_feedback": "Sending Feedback",
   "sending_feedback_failed": "Failed to Send Feedback",
   "critical_error_warning": "Warning: A critical error has occurred!",
+  "unknown_networking_error": "${app_name} has encountered an unknown communications error. If this problem continues, please send \"${user_feedback}\" which is an option on the \"${actions}\" button.",
   "updates": {
     "check_for_newer_app": "Check for software updates",
     "check_for_content_updates": "Check for content updates",
