--- a/src/locale/English-en_US.json
+++ b/src/locale/English-en_US.json
@@ -223,8 +223,8 @@
     "dcs_create_new_failed": "The ${door43} repository could not be created.<br/><br/>Do you want to retry creating the ${door43} repository or continue without renaming?",
     "dcs_rename_conflict": "Rename failed because a repository with this name already exists.<br/><br/>To be able to upload your project to ${door43}, you need to either rename your local project or rename your ${door43} Project.",
     "dcs_create_new_conflict": "Create new repository failed because a repository with this name already exists.<br/><br/>To be able to upload your project to ${door43}, you need to either rename your local project or rename your ${door43} Project.",
-    "unknown_download_networking_error": "${app_name} has encountered an unknown communications error trying to download the project from ${project_url}. If this problem continues, please send \"${user_feedback}\" which is an option on the \"${actions}\" button.",
-    "known_download_networking_error": "Download failed because \"${error_message}\" occurred while importing your project from ${project_url}"
+    "unknown_download_networking_error": "${app_name} has encountered an unknown communications error trying to download the project from \"${project_url}\".<br/><br/>If this problem continues, please send \"${user_feedback}\" which is an option on the \"${actions}\" button.",
+    "known_download_networking_error": "The download failed because the error \"${error_message}\" occurred while importing your project from ${project_url}"
   },
   "project_validation": {
     "language_mismatch": "Language Name not valid for Code",
